--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@sourcebox/web",
+  "description": "Server and client sandbox libraries",
   "version": "0.0.1",
   "author": "Johannes Henninger <johannes@henninger.io>",
   "license": "GPL-3.0+",
@@ -7,7 +8,7 @@
   "main": "./lib/server/server.js",
   "browser": "./lib/client/client.js",
   "dependencies": {
-    "@sourcebox/sandbox": "file:../sandbox",
+    "@sourcebox/sandbox": "git+ssh://git@henninger.io:sourcebox/sandbox",
     "bluebird": "^2.10.2",
     "lodash": "^3.10.1",
     "socket.io": "^1.3.7",
