--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "socket.io-client": "^1.3.7"
   },
   "devDependencies": {
-    "browserify": "^12.0.1"
+    "browserify": "^12.0.1",
+    "uglify-js": "^2.6.1"
   },
   "scripts": {
-    "bundle": "browserify -r . -s Sourcebox -o sourcebox-client.js"
+    "bundle": "browserify -r . -s Sourcebox -o sourcebox-client.js && uglifyjs sourcebox-client.js -cmo sourcebox-client.min.js"
   }
 }
