--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@sourcebox/web",
   "description": "Server and client sandbox libraries",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "Johannes Henninger <johannes@henninger.io>",
   "license": "GPL-3.0+",
   "private": true,
@@ -18,13 +18,13 @@
     "lodash": "./lib/client/lodash.js"
   },
   "dependencies": {
-    "bluebird": "^3.3.4",
+    "bluebird": "^3.3.5",
     "lodash": "^4.6.1",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7"
   },
   "optionalDependencies": {
-    "@sourcebox/sandbox": "waywaaard/sourcebox-sandbox"
+    "@sourcebox/sandbox": "git+ssh://git@github.com/waywaaard/sourcebox-sandbox.git"
   },
   "devDependencies": {
     "browserify": "^13.0.0",
